[gd_scene load_steps=5 format=3 uid="uid://vwnr4d5b3tqw"]

[ext_resource type="Texture2D" uid="uid://cbp2dopptqbqh" path="res://items/bamboo_twig/bamboo_twig.png" id="1_q8t3f"]
[ext_resource type="Script" uid="uid://cx6yd66hsofn4" path="res://items/bamboo_twig/bamboo_twig.gd" id="1_txcrk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ca0o6"]
size = Vector2(54, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ybyt"]
size = Vector2(54, 6)

[node name="BambooTwig" type="RigidBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_txcrk")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_q8t3f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ca0o6")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_8ybyt")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
